
--You can now mouse over your own won squares, after all your squares are set
  but pre-reveal, to preview how revealing a given square will affect the score
  graph (thanks MZO).

--Changed behavior post-disconnect when the game has timed out out from
  underneath a player (now displays a GAME TIMED OUT message instead of
  DENIED BY SERVER).





Version 10     Live Server Fixes

--Even more detailed game logging to catch DENIED bug during wait_move.

--Fixed other game list on waiting screen to ignore games that are ending due
  to players leaving.

--Finally found and fixed the DENIED BY SERVER bug during wait_move.  Server
  is now more robust when dealing with unexpected player request orderings.

--Added a grace period to server-side enforcement of move time limit to allow
  for one client retry during a network outage.

--Added number at the top of each bar on users graphs.




Version 10     2014-December-2

--Fixed stale list of other games when returning to waiting for opponent.

--Changed row coloring of our row to make our possible squares from their
  perspective more visible.  Changed reveal black-stroking to ensure that
  all squares in row that they gave to themselves are visible at the end
  of the game.

--Changed FOLD key command to f instead of x (thanks Zed).

--Added left/right arrow keys for picking reveal column (thanks Zed).





Version 9      Live Server Fixes

--Added detailed logging around ending games to catch DENIED bug during
  wait_move.





Version 9      2014-November-27

--Fixed client bug in coin distribution after a tie.

--Fixed confusing behavior when opponent bets less than us and then folds (our
  larger bet is now shown moving into the pot before the payout---before, our
  larger bet was not shown moving into the pot).

--Fixed bugs in possible score graph update when sliders are dragged over
  blocked columns or when one slider pushes another out of the way.
